@@ -1,4 +1,4 @@
- package com.lllbllllb.productinfoservice.controller;
+package com.lllbllllb.productinfoservice.controller;
 
 import lombok.AccessLevel;
 import lombok.NoArgsConstructor;
@@ -8,15 +8,19 @@ public final class ProductInfoServiceControllerHttpRoutes {
 
     public static final String PRODUCT_CODE = "productCode";
 
-    public static final String PRODUCT_CODE_URL = String.format("/{%s}", PRODUCT_CODE);
+    public static final String PRODUCT_CODE_URL = "/code/{%s}".formatted(PRODUCT_CODE);
 
     public static final String BUILD_NUMBER = "buildNumber";
 
-    public static final String BUILD_NUMBER_URL = String.format("/{%s}/{%s}", PRODUCT_CODE, BUILD_NUMBER);
+    public static final String PRODUCT_CODE_BUILD_NUMBER_URL = "/code/{%s}/build/{%s}".formatted(PRODUCT_CODE, BUILD_NUMBER);
 
     public static final String REFRESH_URL = "/refresh";
 
     public static final String STATUS_URL = "/status";
 
-    public static final String REFRESH_PRODUCT_CODE_URL = String.format("%s%s", REFRESH_URL, PRODUCT_CODE_URL);
+    public static final String REFRESH_PRODUCT_CODE_URL = "%s%s".formatted(REFRESH_URL, PRODUCT_CODE_URL);
+
+    public static final String LAST_BUILDS_DATA = "/lastBuildsData";
+
+    public static final String ACTIVE_ROUNDS_DATA = "/activeRoundsData";
 }
